# sentiric-stt-service

./: .dockerignore  .env.docker  .env.example  DEMO.md  Dockerfile  LOGIC.md  README.md  TASKS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.service.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: main.py
app/api/v1/: endpoints.py
app/core/: config.py  logging.py
app/services/: streaming_service.py  stt_service.py
app/services/adapters/: base.py  faster_whisper_adapter.py  google_live_adapter.py
app/static/: script.js  style.css
app/templates/: index.html
app/utils/: audio.py
examples/: README.md  g711_test.py  requirements.txt
tests/: test_api.py
