# sentiric-stt-service/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiric-stt-service"
version = "0.2.0"
description = "High-performance, streaming STT service for the Sentiric ecosystem."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "python-multipart",
    "pydantic",
    "pydantic-settings", # BU SATIR ZATEN MEVCUT, KONTROL EDİN
    "python-dotenv",
    "typing-extensions",
    "structlog",
    "colorama",
    "prometheus-fastapi-instrumentator",
    "faster-whisper",
    "ctranslate2>=3.20.0,<4.0.0",
    "soundfile",
    "jinja2",
    "numpy",
    "webrtcvad",
    "google-generativeai>=0.5.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"