[tool.poetry]
name = "sentiric-stt-service"
version = "0.2.0"
description = "High-performance, streaming STT service for the Sentiric ecosystem."
authors = ["Azmi ŞAHİN <6445951+azmisahin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websockets = "^12.0"
python-multipart = "^0.0.9"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
typing-extensions = "^4.12.2"
structlog = "^24.1.0"
colorama = "^0.4.6"
prometheus-fastapi-instrumentator = "^6.1.0"
faster-whisper = "^1.0.3"
ctranslate2 = "^4.0.0" 
soundfile = "^0.12.1"
jinja2 = "^3.1.4"
numpy = "^1.26.4"
webrtcvad-wheels = "^2.0.11"
google-generativeai = ">=0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"